# devops-maturity

./: .env.example  .gitignore  .gitmodules  .pa11yci  .pre-commit-config.yaml  CONTRIBUTING.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  coverage.xml  devops-maturity.yml  devops_maturity.db  integration_test.py  mkdocs.yml  noxfile.py  pyproject.toml  test_runner.py  validate_tests.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: accessibility.yml  black-duck-security-scan-ci.yml  ci.yml  codeql.yml  dast.yml  deploy.yml  devops-maturity.yml  docs-site.yml  ods-validate.yml  performance.yml  release-drafter.yml  release.yml
docs/: index.html  index.md  style.css
docs/deploy/: hosting.md
docs/examples/: badge.md  terminal-output.md  yaml-config.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: cli-flags.md  configuration.md  criteria.md  maturity-levels.md
docs/stylesheets/: extra.css
docs/usage/: cli-auto.md  cli-config.md  cli-interactive.md  web-interface.md
src/badges/: generator.py
src/cli/: ai_client.py  cli.py  main.py  repo_fetcher.py
src/config/: criteria.yaml  loader.py
src/core/: badge.py  model.py  scorer.py
src/web/: main.py
src/web/static/: style.css
src/web/templates/: assessments.html  edit_assessment.html  form.html  login.html  register.html  result.html
tests/: README.md  test_auto_assess.py  test_badge.py  test_cli.py  test_config.py  test_config_loader.py  test_core.py  test_database.py  test_functional.py  test_loader.py  test_performance.py  test_scorer.py  test_web.py
