[build-system]
requires = ["setuptools>=62.6", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-maturity"
description = "A tool to evaluate and measure the maturity level of your DevOps practices."
authors = [
  { name = "Xianpeng Shen", email = "xianpeng.shen@gmail.com" }
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

keywords = ["devops", "maturity", "assessment", "cli"]

dependencies = [
  "fastapi",
  "typer",
  "jinja2",
  "pydantic",
  "pyyaml",
  "sqlalchemy",
]

[project.scripts]
devops-maturity = "cli.main:app"

[project.urls]
homepage = "https://github.com/devops-maturity"
source = "https://github.com/devops-maturity/devops-maturity"
tracker = "https://github.com/devops-maturity/devops-maturity/issues"

[project.optional-dependencies]
dev = [
  "ruff",
  "uvicorn",
]
test = [
  "fastapi",
  "httpx",
  "pytest",
  "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools_scm]
# It would be nice to include the commit hash in the version, but that
# can't be done in a PEP 440-compatible way.
version_scheme= "no-guess-dev"
# Test PyPI does not support local versions.
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.mypy]
ignore_missing_imports = true
